--- a/src/_includes/site-footer.html
+++ b/src/_includes/site-footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div>
-        <span>&copy; {{ "now" | date: "%Y" }} Phillip Jackson</span>
+        <span>&copy; 2025 Phillip Jackson</span>
     </div>
     <nav class="">
         <a href="https://codepen.io/unisys12">
