--- a/src/index.njk
+++ b/src/index.njk
@@ -1,27 +1,66 @@
+---
+description: "Unisy's Blog - A personal blog about my life, work, and interests."
+---
+
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uniy's Blog</title>
+    <title>Unisy's Blog</title>
     <link rel="stylesheet" href="assets/css/pico.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    {% include "components/seo.njk" %}
   </head>
+
   <body class="container">
-    {% render 'site-header.html' %}
+    {% include 'site-header.html' %}
     <main>
       <div class="grid">
         <article>
           <section>
             <p>
-              Hello! I have no idea how you ended up here, but otherwise, I will apologize for what seems like either a
-              run of bad luck for you
+              Hello! I have no idea how you ended up here, but otherwise, I will apologize for what seems like either a run of bad luck for you or maybe your just having a bad day. Either way, I am glad your here. My name is
+              <b>Phillip Jackson</b>,
+              <i>a.k.a</i>
+              <b>Unisys12</b>. Online, most of my friends call me Uni.
             </p>
           </section>
           <section>
             <p>
-              In February of 2020, my wife started her own business as a dog trainer. In November of 2020, she was
-              scheduled to have surgery which was going to require a 3 to 4-week recovery time. We had planned for this,
+              In February of 2020, my wife started her own business as a dog trainer. In November of 2020, she was scheduled to have surgery which was going to require a 3 to 4-week recovery time. We had planned for this,
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
               my employer included, by me saving all my vacation time for this period. At around the same time is when
               COVID-19 started having a greater impact locally. I ended up being off work for 2 months straight. During
               this period, my wife and I discussed me leaving my then current job and coming home to help her. She had
@@ -42,6 +81,39 @@
           <section>
             <p>
               Technology, and science in general, is still one of my deepest passions and I find ways to incorporate it
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
               whenever I can. Be it through my 25+ yrs of web development experience or figuring out ways to utilize our
               Office 365 Grant to the fullest.
             </p>
@@ -50,6 +122,39 @@
           <section>
             <p>
               Dabbling in web development over the last 25+ years has been a blessing and a curse. I am the
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
               quintessential _"Jack of all trades, master of none!"_ if I am being completely honest. I have a ton of
               experience in a lot of different areas, but never really feel like I have mastered a single one. Then
               again, that can be a good thing. I am very open minded and have never felt the need to follow any flow or
@@ -78,12 +183,12 @@
               https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_800/v1616786121/Boudreaux/20201026_201311_szrmhq.webp 800w,
               https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_480/v1616786121/Boudreaux/20201026_201311_szrmhq.webp 480w
             "
-            alt="profile"
-          >
+            alt="profile">
           <figcaption>Me with a clients frenchy after a training session at a local Tractor Supply.</figcaption>
         </figure>
       </div>
     </main>
-    {% render 'site-footer.html' %}
+    {% include 'site-footer.html' %}
   </body>
+
 </html>
