add check for meta image

--- a/src/_includes/components/seo.njk
+++ b/src/_includes/components/seo.njk
@@ -9,7 +9,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="{{ title }}">
 <meta property="og:description" content="{{ description }}">
-<meta property="og:image" content="{{ image}}">
+<meta property="og:image" content="{{ image if image else 'https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_480/v1616786121/Boudreaux/20201026_201311_szrmhq.webp'}}">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -17,4 +17,4 @@
 <meta property="twitter:url" content="https://unisys12.github.io{{ page.url }}">
 <meta name="twitter:title" content="{{ title }}">
 <meta name="twitter:description" content="{{ description }}">
-<meta name="twitter:image" content="{{ image}}">
+<meta name="twitter:image" content="{{ image if image else 'https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_480/v1616786121/Boudreaux/20201026_201311_szrmhq.webp'}}">
