add image meta tag to base head

--- a/src/_includes/components/seo.njk
+++ b/src/_includes/components/seo.njk
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ description }}">
 <meta name="generator" content="{{ eleventy.generator }}">
+<meta property="og:image" content="{{ image if image else 'https://res.cloudinary.com/ftpta-com/image/upload/f_auto,q_auto,w_480/v1616786121/Boudreaux/20201026_201311_szrmhq.webp'}}">
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://unisys12.github.io{{ page.url }}">
