--- a/src/collections.njk
+++ b/src/collections.njk
@@ -6,6 +6,7 @@
     <title>Collections</title>
     <link rel="stylesheet" href="/assets/css/pico.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
+    {% include "components/posthog.html" %}
     {% include "components/seo.njk" %}
   </head>
   <body class="container">
