--- a/src/index.njk
+++ b/src/index.njk
@@ -11,6 +11,7 @@ description: "Unisy's Blog - A personal blog about my life, work, and interests.
     <title>Unisy's Blog</title>
     <link rel="stylesheet" href="assets/css/pico.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    {% include "components/posthog.html" %}
     {% include "components/seo.njk" %}
   </head>
 
