--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -19,7 +19,7 @@
   gap: 1rem;
 }
 
-.tag {
+.tags {
   display: inline-block;
   padding: 0.25rem 0.75rem;
   border-radius: 1rem;
@@ -34,13 +34,13 @@
     color 0.15s ease-in-out;
 }
 
-.tag:hover {
+.tags:hover {
   background-color: #333;
   color: #fff;
   border: 1px solid #666;
 }
 
-.tag > a {
+.tags > a {
   color: inherit;
   text-decoration: none;
 }
