--- a/src/collections/index.njk
+++ b/src/collections/index.njk
@@ -4,14 +4,16 @@ pagination:
   data: collections
   size: 1
   alias: tag
-permalink: /collections/{{ tag | slug }}/
+permalink: /collections/{{ tag | slugify }}/
 layout: "layouts/blog.njk"
 ---
 
 {% set taglist = collections[tag] %}
 
-<h1>Found {{ taglist.length }} Articles Related to “{{ tag }}”</h1>
-
+<header>
+  <h1>Found {{ taglist.length }} Articles Related to “{{ tag }}”</h1>
+</header>
+<hr>
 {% for post in taglist | reverse %}
   <article class="grid">
     <section class="container">
@@ -25,7 +27,7 @@ layout: "layouts/blog.njk"
       <section class="cloud">
         {% for tag in post.data.tags %}
           <span class="tags">
-            <a href="/collections/{{ tag | slug }}">{{ tag }}</a>
+            <a href="/collections/{{ tag | slugify }}">{{ tag }}</a>
           </span>
         {% endfor %}
       </section>
