--- a/collections/components/index.html
+++ b/collections/components/index.html
@@ -61,8 +61,10 @@
           
 
 
-<h1>Found 2 Articles Related to “components”</h1>
-
+<header>
+  <h1>Found 2 Articles Related to “components”</h1>
+</header>
+<hr>
 
   <article class="grid">
     <section class="container">
@@ -75,23 +77,23 @@
       </hgroup>
       <section class="cloud">
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/blog">blog</a>
           </span>
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/laravel">laravel</a>
           </span>
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/components">components</a>
           </span>
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/tables">tables</a>
           </span>
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/html">html</a>
           </span>
         
@@ -114,27 +116,27 @@
       </hgroup>
       <section class="cloud">
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/blog">blog</a>
           </span>
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/11ty">11ty</a>
           </span>
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/ssg">ssg</a>
           </span>
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/jamstack">jamstack</a>
           </span>
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/components">components</a>
           </span>
         
-          <span class="tag">
+          <span class="tags">
             <a href="/collections/givebutter">givebutter</a>
           </span>
         
