--- a/src/portfolio/index.liquid
+++ b/src/portfolio/index.liquid
@@ -9,7 +9,7 @@ layout: "layouts/blog.njk"
         <a href="{{ project.url }}">{{ project.data.title }}</a>
       </h2>
       <p>{{ project.data.description }}</p>
-      <p>{{ project.data.publishDate | formatDate }}</p>
+      <p>{{ project.data.date | formatDate }}</p>
     </h2>
   </hgroup>
   <section style="place-items: center">
